Fri Apr  9 13:51:47 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Added a script that works similarly to create_ace_build.pl except
          that it does not restrict the location of the cloned build tree
          and works with any tree structure, not just ACE_wrappers.

Fri Apr  9 12:38:15 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          When replacing $() with template variables, we need to ensure that
          if what it is replaced with also contains a $() construct, then
          that too will be replaced with relative definitions.

Thu Apr  8 09:51:28 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:

          Corrected a problem with the pch_postrule commands.  I forgot that
          $$ was interpreted by make, so what I really wanted was $$$$ to
          get $$ passed out to the shell.

Thu Apr  8 07:02:25 2004  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Driver.pm:

          Removed the documentation stating that new name value template
          pairs could not be added using -value_template.  This is no longer
          the case.

        * modules/Options.pm:
        * modules/ProjectCreator.pm:
        * modules/TemplateInputReader.pm:
        * modules/TemplateParser.pm:

          Support replacing $() constructs with template values of the same
          name.  By default all project creators will do this.  Overriding
          the expand_variables_from_template_values method is the way to
          modify this behavior.

Wed Apr  7 06:49:16 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Finished support for the 'pch_postrule' of the Define_Custom which